--- a/packages/pdfator-front/public/index.html
+++ b/packages/pdfator-front/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <meta name="Description" content="A simple website to file cli and lambda">
+  <link rel="icon" href="<%= BASE_URL %>pdfatoricon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <title>pdfator</title>
 </head>
